assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

// Our variables
// $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
// $base-font-family: 'Rokkitt', serif !default;

 // $base-font-family:'Raleway', sans-serif; // NOTE: LOOKS SQUISHED   7/10

 $base-font-family:'Assistant', sans-serif; // // NOTE: IS ON-MESSAGE , LOOKS MARKET-Y 7.7/10
 // $base-font-family:'Cabin', sans-serif;  //NOTE:  looks malleable, flexible : 5/10 but with potential (lighter?)





$base-font-size:   14px;
$base-font-weight: 400;
$small-font-size:  $base-font-size * 1.175;
$base-line-height: 1.5;

$spacing-unit:     25px;

$text-color:       #111;
$background-color: #fdfdfd;
$brand-color:      #2a7ae2;

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

// Width of the content area
$content-width:    1175px;

$on-palm:          600px;
$on-laptop:        800px;

.title-text {
    letter-spacing: 3px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;

// font-family: 'Assistant', sans-serif;
// font-family: 'Cabin', sans-serif;
}

.post-title {
  font-family: 'Assistant', sans-serif;
}

h1, h2, h3, h4, h5, p, li, span {
  letter-spacing: .805px;
}

@import "minima";
@import 'materialize';

.ilike-amber-container {
  @extend .amber, .lighten-1;
}


a:visited, a:hover {
  color: #002355;
}


.blog-font {
  font-family: 'Cabin', sans-serif;
  font-weight: 300;
  font-style: normal;
}

.strong-blog-font {
  font-family: 'Cabin', sans-serif;
  font-weight: 700;
  font-style: normal;
}

